# pbshm-module-template

./: README.md  cookiecutter.json
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_namespace}}/: __init__.py  init_core.py  init_framework.py
{{cookiecutter.project_namespace}}/parent_dir_contents/: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  {{ cookiecutter.__project_slug }}_sideloader.json
{{cookiecutter.project_namespace}}/parent_dir_contents/.github/workflows/: pypi-publish.yml
{{cookiecutter.project_namespace}}/{{cookiecutter.__project_slug}}/: routes.py
{{cookiecutter.project_namespace}}/{{cookiecutter.__project_slug}}/static/: static_file.json
{{cookiecutter.project_namespace}}/{{cookiecutter.__project_slug}}/templates/: example.html
{{cookiecutter.project_namespace}}/{{cookiecutter.project_slug}}/: __init__.py  routes.py  {{cookiecutter.project_slug}}.py
{{cookiecutter.project_namespace}}/{{cookiecutter.project_slug}}/static/: static_file.json
{{cookiecutter.project_namespace}}/{{cookiecutter.project_slug}}/templates/: example.html
