[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "{{cookiecutter.__project_slug}}"
version = "{{cookiecutter.version}}"
authors = [
    { name = "{{cookiecutter.first_name}} {{cookiecutter.last_name}}", email = "{{cookiecutter.email}}" }
]
description = "{{cookiecutter.project_short_description}}"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: {{cookiecutter.license}}",
    "Programming Language :: Python :: 3",
    "Framework :: Flask"
]
requires-python = ">=3.8.10"
dependencies = [
    "pbshm-core >= 1.1.1"
]

[project.urls]
homepage = "https://github.com/{{cookiecutter.github_username}}/{{cookiecutter.__project_slug}}"

[tool.setuptools.packages.find]
exclude = ["instance"]